Mudança no container-fluid

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	</head>
 <body class="fundo">
 	<center>
-		<div class="container container-fluid p-4 rounded my-4 border" style="width: 500px;">
+		<div class="container container-fluid p-4 rounded my-4 border">
 			<form method="POST" action="processa.php" id="formImposto">
 				<span><h5>Verificação do imposto de renda</h5></span>
 				<div class="form-group">
